# robot

./: .dockerignore  .gitignore  .gitmodules  README.md  bridge.sh  bridge.yaml  build-docker.sh  docker-gui-ros1.sh  docker-gui-ros2.sh  env.sh  installros.sh  param_bridge.sh  remote-1-screen.sh  ros-mini.Dockerfile  ros2screen.sh  rosbridge.sh  rundescription.sh  runhoverboard.sh  runimu.sh  runrosboard.sh  runubuntu.sh  runvision.sh  screen.sh
.devcontainer/: devcontainer.json  devcontainer.json.compose  la
cad/: Cover Cover (3d printed sprocket for hoverboard motor).sldprt
docker/: .gitignore  60-serial-rules  authorized_keys  base.Dockerfile  bash.bashrc  fromsrc.Dockerfile  gazebo.Dockerfile  mini-withbase.Dockerfile  missingalpine.txt  notes  ros-dev.Dockerfile  ros-gazebo.Dockerfile  ros2.Dockerfile  startup.sh  supervisor-xserver-nginx.conf  supervisor-xserver.conf  supervisord.conf  ubuntu-ros-desktop.Dockerfile  ubuntu-small.Dockerfile
docker/old/: alpine.Dockerfile  mini.Dockerfile  ros-dev.Dockerfile  ros-gazebo.Dockerfile  startup-new.sh  (+1 more)
k8/: configmap.sh  qemu-user-static.yml  smarter-device-manager-ds-with-configmap-rpi.yaml
preload/: \  bind.c  bindaddr.c  bindport.c  test.c  test.sh
ros-workspace/: .dockerignore  .gitignore  build.sh  init-workspace.sh  installpigpio.sh  installros.sh  installros2.sh  installrtimu.sh  mkswap.sh  mpu9250_i2c.py  mputest.py
ros2-workspace/: .gitignore  acceptable_disparity_1.yaml  acceptable_disparity_2.yaml  alltopics.sh  build.sh  installkinect.sh  installros2.sh  rosdep.sh  shm_profile.xml
ros2-workspace/src/ros2_hoverboard/: CMakeLists.txt  package.xml  ros2_control_demo_hardware.xml
ros2-workspace/src/ros2_hoverboard/debug/: hoverserial_main.py  python_serial.py
ros2-workspace/src/ros2_hoverboard/include/ros2_hoverboard/: diffbot_system.hpp
ros2-workspace/src/ros2_hoverboard/launch/: diffbot_system.launch.py
ros2-workspace/src/ros2_hoverboard/ros2_control/: diffbot_system.ros2_control.xacro
ros2-workspace/src/ros2_hoverboard/src/: diffbot_system.cpp  diffbot_system.cpp.newversion
ros2-workspace/src/ros2_hoverboard/urdf/: diffbot_system.urdf.xacro
rviz/: kinect.rviz
scripts/: authorized_keys  bluetooth-rpi.sh  bluetooth.sh  devcont-shell.sh  ekf_template.yaml  ekf_template_example.yaml  gps.launch  gzserver.launch  httpserver.py  imu.launch  inotify_restart.sh  linkbar.html  list_services.py  localization.launch  mpu9250.launch  reverse-sshfs  reverse-sshfs-rosws  ros-run.sh  save_map.sh  sshd_config  supervisord-vnc.conf  test.urdf.xacro  test_api.sh
(+134 files in other folders)
